try to fix image

--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
                 <div class="members-section row text-center">
                     <div class="col col-third">
                         <p class="name">Fish</p> 
-                        <img class="member-img mt-16px" src="/assets/img/Fish.jpg" alt="Fish">
+                        <img class="member-img mt-16px" src="./assets/img/Fish.jpg" alt="Fish">
                     </div>
                     <div class="col col-third">
                         <p class="name">Fish</p>  
-                        <img class="member-img mt-16px" src="/assets/img/Fish.jpg" alt="Fish">                                                         
+                        <img class="member-img mt-16px" src="./assets/img/Fish.jpg" alt="Fish">                                                         
                     </div>
                     <div class="col col-third">
                         <p class="name">Fish</p>
-                        <img class="member-img mt-16px" src="/assets/img/Fish.jpg" alt="Fish">
+                        <img class="member-img mt-16px" src="./assets/img/Fish.jpg" alt="Fish">
                     </div>
                 </div>
             </div>
