final commit i promised

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </ul>
                     <div class="place-section row">
                         <div class="col col-third">
-                            <img src="/assets/img/place1.jpg" alt="" class="place-img">
+                            <img src="./assets/img/place1.jpg" alt="" class="place-img">
                             <div class="place-body">
                                 <p class="place-heading">Block</p>
                                 <p class="mt-16px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis nobis id officiis suscipit!</p>
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                         <div class="col col-third">
-                            <img src="/assets/img/place2.jpg" alt="" class="place-img">
+                            <img src="./assets/img/place2.jpg" alt="" class="place-img">
                             <div class="place-body">
                                 <p class="place-heading">Plant</p>
                                 <p class="mt-16px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis nobis id officiis suscipit!</p>
