added input color

--- a/index.html
+++ b/index.html
@@ -134,15 +134,15 @@
                         <form action="" class="contract-form">
                             <div class="row">
                                 <div class="col col-half s-col-full s-mt-8px">
-                                    <input type="text" required placeholder="Name" class="form-control">
+                                    <input type="text" required placeholder="Name" class="form-control input">
                                 </div>
                             <div class="col col-half s-col-full s-mt-8px">
-                                <input type="text" required placeholder="Email" class="form-control">
+                                <input type="text" required placeholder="Email" class="form-control input">
                             </div>
                             </div>
                             <div class="row mt-8px">
                                 <div class="col col-full">
-                                    <input type="text" required placeholder="Message" class="form-control">
+                                    <input type="text" required placeholder="Message" class="form-control input">
                                 </div>
                             </div>
                             <input class="mt-16px confirm-button s-full-width" type="submit" value="Send">
@@ -179,13 +179,13 @@
                 <i class="fas fa-shopping-cart "></i>
                 Ticket, $15 per person
             </label>
-            <input id="input-ticketNum" type="number" class="modal-input" placeholder="How many?"> 
+            <input id="input-ticketNum" type="number" class="input" placeholder="How many?"> 
         
             <label for="input-email" class="modal-label">
                 <i class="fas fa-user"></i>
                 Send to
             </label>
-            <input id="input-email" type="email" class="modal-input" placeholder="Enter email..."> 
+            <input id="input-email" type="email" class="input" placeholder="Enter email..."> 
             <button id="pay-ticket" class="text-white s-full-width">
                 Pay
                 <i class="fas fa-check"></i>
