--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
                 <i class="fas fa-shopping-cart "></i>
                 Ticket, $15 per person
             </label>
-            <input id="input-ticketNum" type="number" class="input" placeholder="How many?"> 
+            <input id="input-ticketNum" type="number" placeholder="How many?"> 
         
             <label for="input-email" class="modal-label">
                 <i class="fas fa-user"></i>
                 Send to
             </label>
-            <input id="input-email" type="email" class="input" placeholder="Enter email..."> 
+            <input id="input-email" type="email" placeholder="Enter email..."> 
             <button id="pay-ticket" class="text-white s-full-width">
                 Pay
                 <i class="fas fa-check"></i>
